--- a/client/index.css
+++ b/client/index.css
@@ -21,7 +21,6 @@ body{
     position: absolute;
     font-family: 'Open Sans', sans-serif;
     font-weight: 800;
-    letter-spacing: 2px;
     color: #555555;
     top: 2.8%;
     margin-left: 12%;
@@ -182,7 +181,6 @@ input[type=submit]:hover {
 .page-header{
     font-family: 'Open Sans', sans-serif;
     color: #555555;
-    letter-spacing: 2px;
     margin-bottom: 15px;
 }
 
@@ -239,7 +237,29 @@ form{
     z-index: 2;
 }
 
+li{
+    list-style-type: none;
+}
+
+#events-calendar{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+}
+
+.fc-left{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
+}
+
+.title{
+    margin-top: 10px;
+    margin-left: 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
+}
+
 #blackscreen{
+    display: none;
     position: absolute;
     opacity: 0.65;
     background: black;
