--- a/client/index.css
+++ b/client/index.css
@@ -218,6 +218,40 @@ form{
     font-weight: 300;
 }
 
+#home h3{
+    margin: 0 0 20px 18%;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+}
+
+#today-list{
+    margin: 0 0 0 20%;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+}
+
+.todo{
+    margin-bottom: 20px;
+}
+
+.list-group-item{
+    margin-bottom: 10px;
+}
+
+.todo button{
+    margin-right: 10px;
+    height: 30px;
+}
+
+.complete{
+    background: #30fd59;
+    color: black;
+}
+
+.failed{
+    background: #ff4a48;
+    color: black;
+}
 /********************************************/
 /*REMINDERS TAB*/
 /********************************************/
@@ -339,3 +373,23 @@ button {
 	height: 25px;
 }
 
+/********************************************/
+/*ACTIONS TAB*/
+/********************************************/
+
+.description{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+}
+
+.action{
+    margin-bottom: 20px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+}
+
+#calendar{
+    margin-top: 10px;
+    margin-left: 40px;
+    margin-bottom: 20px;
+}
