--- a/client/index.css
+++ b/client/index.css
@@ -60,16 +60,15 @@ input[type=submit]:hover {
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
     width: 300px;
-    position: absolute;
     left: 70%;
     top: 30px;
+    position: absolute; 
 }
 
 #message p{
     display: inline-block;
-    margin-right: 2%; 
+    margin-right: 2%;
 }
-
 /********************************************/
 /*MAIN BODY*/
 /********************************************/
@@ -204,8 +203,8 @@ form{
 }
 
 #home .hello{
-    margin-left: 15%;
     font-family: 'Open Sans', sans-serif;
+    margin-left: 10px;
     font-weight: 800;
     letter-spacing: 2px;
     color: #777777;
@@ -213,19 +212,19 @@ form{
 }
 
 #home .info{
-    margin: 0 0 20px 18%;
+    margin: 0 0 20px 40px;
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
 }
 
 #home h3{
-    margin: 0 0 20px 18%;
+    margin: 0 0 20px 40px;
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
 }
 
 #today-list{
-    margin: 0 0 0 20%;
+    margin: 0 0 0 40px;
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
 }
