--- a/client/index.css
+++ b/client/index.css
@@ -69,6 +69,13 @@ input[type=submit]:hover {
     display: inline-block;
     margin-right: 2%;
 }
+
+.loggedout{
+    font-family: 'Raleway', sans-serif;
+    font-size: 30px;
+    text-align: center;
+    margin-top: 50px;
+}
 /********************************************/
 /*MAIN BODY*/
 /********************************************/
