--- a/client/index.css
+++ b/client/index.css
@@ -343,11 +343,6 @@ li{
     margin-left: 20px;
 }
 
-.listactions{
-    margin-top: 20px;
-    overflow-y: scroll;
-}
-
 .description{
     margin-bottom: 20px;
 }
@@ -386,6 +381,10 @@ button {
 .close{
 	width: 50px;
 	height: 25px;
+}
+
+#popup .listactions .description .close{
+    margin-left: 0;
 }
 
 .dayevents{
@@ -446,3 +445,10 @@ a{
 a:hover{
     color: #222222;
 }
+
+.listactions{
+    margin-top: 20px;
+    height: 90%;
+    overflow-y: scroll;
+}
+
